--- a/app/src/main/res/layout/activity_add_video.xml
+++ b/app/src/main/res/layout/activity_add_video.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".addVideo.AddVideo">
+    tools:context=".addVideo.AddVideoActivity">
 
 
 
