--- a/app/src/main/res/layout/activity_video_display.xml
+++ b/app/src/main/res/layout/activity_video_display.xml
@@ -4,17 +4,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="VideoDisplayActivity">
+    tools:context=".videoDisplay.VideoDisplayActivity">
 
     <!-- Video view for playing the video -->
     <VideoView
-        android:id="@+id/videoView"
+        android:id="@+id/vvVideo"
         android:layout_width="match_parent"
         android:layout_height="200dp" />
 
     <!-- Title of the video -->
     <TextView
-        android:id="@+id/title"
+        android:id="@+id/tvTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="8dp"
@@ -23,7 +23,7 @@
 
     <!-- Description of the video -->
     <TextView
-        android:id="@+id/description"
+        android:id="@+id/tvDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="8dp"
@@ -62,7 +62,8 @@
         android:id="@+id/commentInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Add a comment" />
+        android:hint="Add a comment"
+        android:minHeight="48dp" />
 
     <!-- Button to post a new comment -->
     <Button
@@ -72,8 +73,8 @@
         android:text="Post" />
 
     <!-- RecyclerView for displaying comments -->
-    <RecyclerView
-        android:id="@+id/commentsRecyclerView"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvCommentsRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 </LinearLayout>
