--- a/app/src/main/res/layout/activity_video_display.xml
+++ b/app/src/main/res/layout/activity_video_display.xml
@@ -1,16 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".videoDisplay.VideoDisplayActivity">
 
     <!-- Video view for playing the video -->
     <VideoView
         android:id="@+id/vvVideo"
-        android:layout_width="match_parent"
-        android:layout_height="200dp" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBaseline_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <!-- Title of the video -->
     <TextView
@@ -19,7 +24,10 @@
         android:layout_height="wrap_content"
         android:padding="8dp"
         android:text="Title video"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@+id/vvVideo"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <!-- Description of the video -->
     <TextView
@@ -27,32 +35,37 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="8dp"
-        android:text="Description video" />
+        android:text="Description video"
+        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <!-- Buttons for like, share, and comment actions -->
     <LinearLayout
+        android:id="@+id/llButtons"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@+id/tvDescription">
 
         <Button
             android:id="@+id/likeButton"
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Like" />
 
         <Button
             android:id="@+id/shareButton"
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Share" />
 
         <Button
             android:id="@+id/commentButton"
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Comment" />
     </LinearLayout>
@@ -63,18 +76,27 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Add a comment"
-        android:minHeight="48dp" />
+        android:minHeight="48dp"
+        app:layout_constraintTop_toBottomOf="@+id/llButtons"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <!-- Button to post a new comment -->
     <Button
         android:id="@+id/postCommentButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Post" />
+        android:text="Post"
+        app:layout_constraintTop_toBottomOf="@+id/commentInput"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <!-- RecyclerView for displaying comments -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvCommentsRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-</LinearLayout>
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/postCommentButton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+</androidx.constraintlayout.widget.ConstraintLayout>
