my commit - more work on page registration and signup

--- a/app/src/main/res/layout/activity_registration2.xml
+++ b/app/src/main/res/layout/activity_registration2.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RegistrationActivity2">
+    tools:context=".RegistrationPage.RegistrationActivity2">
 
 
     <LinearLayout
@@ -109,6 +109,7 @@
 
 
         <Button
+            android:id="@+id/alredyReg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/SignUp_click"
