--- a/app/src/main/res/layout/activity_add_video.xml
+++ b/app/src/main/res/layout/activity_add_video.xml
@@ -30,6 +30,7 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etTitle"
+            android:singleLine="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Title"
@@ -68,6 +69,7 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etVideoResId"
+            android:singleLine="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Video Resource ID"
