--- a/app/src/main/res/layout/activity_video_display.xml
+++ b/app/src/main/res/layout/activity_video_display.xml
@@ -6,13 +6,14 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".videoDisplay.VideoDisplayActivity">
 
     <!-- Video view for playing the video -->
     <VideoView
         android:id="@+id/vvVideo"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="200dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBaseline_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -49,12 +50,17 @@
         android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@+id/tvDescription">
 
-        <Button
-            android:id="@+id/likeButton"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Like" />
+        <ImageView
+            android:id="@+id/iv_like"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:src="@drawable/like_button_selector"
+            android:contentDescription="@string/like_button_desc"
+            android:padding="8dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:scaleType="centerInside"
+            android:clickable="true"
+            android:focusable="true" />
 
         <Button
             android:id="@+id/shareButton"
@@ -63,38 +69,33 @@
             android:layout_weight="1"
             android:text="Share" />
 
-        <Button
-            android:id="@+id/commentButton"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Comment" />
     </LinearLayout>
 
     <!-- Input field for adding a new comment -->
     <EditText
         android:id="@+id/commentInput"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:background="@drawable/edit_text_background"
         android:hint="Add a comment"
+        android:singleLine="true"
         android:minHeight="48dp"
-        app:layout_constraintTop_toBottomOf="@+id/llButtons"
+        app:layout_constraintEnd_toStartOf="@+id/postCommentButton"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/llButtons" />
 
     <!-- Button to post a new comment -->
     <Button
         android:id="@+id/postCommentButton"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Post"
-        app:layout_constraintTop_toBottomOf="@+id/commentInput"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/llButtons" />
 
     <!-- RecyclerView for displaying comments -->
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvCommentsRecyclerView"
+        android:id="@+id/rvComments"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/postCommentButton"
