controll buttens work

--- a/app/src/main/res/layout/video_list_item.xml
+++ b/app/src/main/res/layout/video_list_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/lyConstraint"
     android:layout_width="match_parent"
     android:layout_height="300dp"
@@ -19,23 +20,57 @@
 
     <TextView
         android:id="@+id/tvTitle"
-        android:layout_width="73dp"
-        android:layout_height="29dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
-        android:paddingTop="4dp"
+        android:padding="5dp"
         android:text="Title"
         android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/tv_like"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/vvVideo" />
 
     <TextView
         android:id="@+id/tvDescription"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
+        android:padding="5dp"
         android:text="Description"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
+
+    <TextView
+        android:id="@+id/tv_like"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
+        android:padding="5dp"
+        android:text="likes: "
+        app:layout_constraintEnd_toStartOf="@+id/tv_view"
+        app:layout_constraintTop_toTopOf="@+id/tvTitle" />
+
+    <TextView
+        android:id="@+id/tv_author"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="1dp"
+        android:text="author: "
+        app:layout_constraintStart_toStartOf="@+id/tv_like"
+        app:layout_constraintTop_toBottomOf="@+id/tv_like" />
+
+    <TextView
+        android:id="@+id/tv_view"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="52dp"
+        android:padding="5dp"
+        android:text="views: "
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tvTitle" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
