--- a/app/src/main/res/layout/activity_add_video.xml
+++ b/app/src/main/res/layout/activity_add_video.xml
@@ -57,24 +57,17 @@
             android:maxLines="5" />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <!-- Video Resource ID Input -->
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/tilVideoResId"
+    <!-- Select Video Button -->
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnSelectVideo"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="24dp"
+        android:text="Select Video"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tilDescription">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etVideoResId"
-            android:singleLine="true"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Video Resource ID"
-            android:inputType="text" />
-    </com.google.android.material.textfield.TextInputLayout>
+        app:layout_constraintTop_toBottomOf="@+id/tilDescription" />
 
     <!-- Add Video Button -->
     <com.google.android.material.button.MaterialButton
@@ -86,7 +79,7 @@
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tilVideoResId" />
+        app:layout_constraintTop_toBottomOf="@+id/btnSelectVideo" />
 
     <!-- Cancel Button -->
     <com.google.android.material.button.MaterialButton
