--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -77,6 +77,12 @@
             android:layout_height="wrap_content"
             android:text="@string/regist_click"
             android:backgroundTint="@color/red" />
+        <Button
+            android:id="@+id/buttonForcCHECK"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/check"
+            android:backgroundTint="@color/red" />
 
     </LinearLayout>
 
