--- a/app/src/main/res/layout/activity_list_video.xml
+++ b/app/src/main/res/layout/activity_list_video.xml
@@ -38,7 +38,7 @@
 
 
         <ImageView
-            android:id="@+id/ivSearch"
+            android:id="@+id/ivAdd"
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:background="?attr/selectableItemBackgroundBorderless"
